# Turbo87-_-clubfridge-neo

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/: renovate.json5
.github/workflows/: ci.yml
migrations/: 20250128165550_create_tables.sql  20250209110458_improve_tables.sql
src/: config.rs  database.rs  logging.rs  main.rs  popup.rs  running.rs  setup.rs  starting.rs  state.rs  ui.rs  vereinsflieger.rs
