[package]
name = "clubfridge-neo"
version = "0.11.0"
license = "MIT OR Apache-2.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "=1.0.98"
clap = { version = "=4.5.40", features = ["derive"] }
iced = { version = "=0.13.1", default-features = false, features = ["tokio", "wgpu"] }
jiff = { version = "=0.2.15", features = ["serde"] }
reqwest = { version = "=0.12.22", default-features = false, features = ["rustls-tls"] }
rust_decimal = "=1.37.2"
rust_decimal_macros = "=1.37.1"
secrecy = "=0.10.3"
self_update = { version = "=0.42.0", default-features = false, features = ["compression-flate2", "rustls"] }
serde = { version = "=1.0.219", features = ["derive"] }
serde_json = "=1.0.140"
sqlx = { version = "=0.8.6", features = ["runtime-tokio", "sqlite"] }
tokio = { version = "=1.45.1", features = ["time"] }
tracing = "=0.1.41"
tracing-appender = "=0.2.3"
tracing-subscriber = "=0.3.19"
ulid = "=1.2.1"
vereinsflieger = "=0.8.0"

[dev-dependencies]
claims = "=0.8.0"
tokio = { version = "=1.45.1", features = ["macros"] }

[package.metadata.release]
sign-commit = true
sign-tag = true
pre-release-commit-message = "Release v{{version}}"
tag-message = ""
