[package]
name = "clubfridge-neo"
version = "0.11.0"
license = "MIT OR Apache-2.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "=1.0.100"
clap = { version = "=4.5.53", features = ["derive"] }
jiff = { version = "=0.2.16", features = ["serde"] }
rust_decimal = "=1.39.0"
rust_decimal_macros = "=1.39.0"
secrecy = "=0.10.3"
self_update = { version = "=0.42.0", default-features = false, features = ["compression-flate2", "rustls"] }
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.145"
sqlx = { version = "=0.8.6", features = ["runtime-tokio", "sqlite"] }
tokio = { version = "=1.48.0", features = ["time"] }
tracing = "=0.1.44"
tracing-appender = "=0.2.4"
tracing-subscriber = "=0.3.22"
ulid = "=1.2.1"
vereinsflieger = "=0.8.0"

[dependencies.iced]
version = "=0.14.0"
default-features = false
features = ["tokio", "wayland", "wgpu"]

[dev-dependencies]
tokio = { version = "=1.48.0", features = ["macros"] }

[package.metadata.release]
sign-commit = true
sign-tag = true
pre-release-commit-message = "Release v{{version}}"
tag-message = ""
